# Metrobots2015

./: CMakeLists.txt  CodeFormat.xml  README.md  main.cpp  sight.cpp  sight.h  socketry.cpp  socketry.h
.metadata/.plugins/org.eclipse.core.resources/.projects/RoboCode/: .markers
.metadata/.plugins/org.eclipse.core.resources/.root/: 3.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.debug.core/.launches/: build.xml.launch
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.jdt.core/: 175584161.index  2964283404.index  externalLibsTimeStamps  nonChainingJarsCache  savedIndexNames.txt
.metadata/.plugins/org.eclipse.jdt.launching/: .install.xml
.metadata/.plugins/org.eclipse.jdt.ui/: QualifiedTypeNameHistory.xml  dialog_settings.xml
.metadata/.plugins/org.eclipse.pde.core/.cache/: clean-cache.properties
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
RoboCode/: build.properties
RobotCode/: .project
RobotCode/org/metrobots/: Library.java
RobotGit/: .project  CodeCleanup.xml  build.properties  sysProps.xml
RobotGit/src/org/usfirst/frc/team3325/robot/: ArmLift.java  Auton.java  Connection.java  DriveTrain.java  GarageSensor.java  Library.java  LinearLift.java  MetroEncoderConversion.java  MetroMouse.java  MouseAPI.java  RGBLED.java  Robot.java  Vision.java
RobotSource/org/usfirst/frc/team3324/robot/: Autonomous.java  DriveTrain.java  Library.java  MetroJoystick.java  Motion.java  Robot.java
RobotSource/org/usfirst/frc/team3324/robot/control/: ArcadeControl.java  HolonomicControl.java  IControl.java  MetroDriveControl.java  RobotControl.java  TankControl.java
RobotSource/org/usfirst/frc/team3324/robot/train/: DriveTrain.java  MecanumDrive.java  RobotMotionException.java  (+1 more)
RobotSource/org/usfirst/frc/team3324/test/: LibraryTest.java
RobotSource/org/usfirst/frc/team3325/robot/: ArmLift.java  Auton.java  DriveTrain.java  GarageSensor.java  LinearLift.java  MetroJS.java  MouseAPI.java  Robot.java
Robotica/: .project
(+6 files in other folders)
